edited info and font

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Spectral by HTML5 UP</title>
+		<title>Twirl Time</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -75,20 +75,20 @@
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
 							<div class="image"><img src="images/laundry_close.jpg" width="30%" height="30%" alt="" /></div><div class="content">
-								<h2>Efficient And Clean Laundry </h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<h2 class="middle-section">Efficient And Clean Laundry </h2>
+								<p class="middle-section">Plenty of laundry options for all sorts of clothing. Book your wash here.</p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/coffee.jpeg" width="30%" height="30%" alt="" /></div><div class="content">
-								<h2>Take A Sip While You Wait</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<h2 class="middle-section">Take A Sip While You Wait</h2>
+								<p class="middle-section">Check out our menu ranging from hot beverages to our finest cuisine.</p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/upcoming_events.jpeg" alt="" /></div><div class="content">
-								<h2>Upcoming Events</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<h2 class="middle-section">Upcoming Events</h2>
+								<p class="middle-section">Save the date! Here are some events coming up this month.</p>
 							</div>
 						</section>
 					</section>
