--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
 							<!-- <h2>Twirl Time</h2> -->
 							<p>Your friendly neighborhood laundrette cafe.</p>
 
-							<a href="#" class="button primary fit">Book a machine >>></a>
+							<a href="#" class="button primary fit">Book a Machine >>></a>
 							<ul class="actions special">
 								
 							</ul>
 						</div>
-						<a href="#one" class="more scrolly">Start Washing!</a>
+						<!--<a href="#one" class="more scrolly">Start Washing!</a>-->
 					</section>
 
 				<!-- One -->
@@ -141,12 +141,25 @@
 									<div class="col-12">
 										<select name="demo-category" id="demo-category">
 											<option value="">- Time -</option>
-											<option value="1">Manufacturing</option>
-											<option value="1">Shipping</option>
-											<option value="1">Administration</option>
-											<option value="1">Human Resources</option>
+											<option value="1">06.00	- 07.00</option>
+											<option value="1">07.00	- 08.00</option>
+											<option value="1">08.00	- 09.00</option>
+											<option value="1">09.00	- 10.00</option>
+											<option value="1">10.00	- 11.00</option>
+											<option value="1">11.00	- 12.00</option>
+											<option value="1">12.00	- 13.00</option>
+											<option value="1">13.00	- 14.00</option>
+											<option value="1">14.00	- 15.00</option>
+											<option value="1">15.00	- 16.00</option>
+											<option value="1">16.00	- 17.00</option>
+											<option value="1">17.00	- 18.00</option>
 										</select>
 									</div>
+									<div class="col-6 col-12-small">
+										<input type="checkbox" id="demo-copy" name="demo-copy">
+										<label for="demo-copy">Email me receipt</label>
+									</div>
+								</div>
 							</form>
 							
 
