fixed font, and booking too ig

--- a/booking.html
+++ b/booking.html
@@ -43,7 +43,7 @@
 					<div class="inner">
 						<header class="major">
 							<h2>Book a washing machine</h2>
-							<p>*Reminder that laundrette is open from 06.00 to 17.00</p>
+							<p>*Reminder that laundrette is open from 06.00 to 18.00</p>
 						</header>
 						<form method="post" action="#">
 							<div class="row gtr-uniform">
@@ -74,7 +74,8 @@
 									<input type="checkbox" id="demo-copy" name="demo-copy">
 									<label for="demo-copy">Email me receipt</label>
 								</div>
-								<div class="col-12-xsmall">
+								
+								<div class="col-12">
 									<a href="#" class="button primary fit">Complete Booking</a>
 								</div>
 							</div>
