added new options on booking form

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 					<div class="inner">
 						<header class="major">
 							<h2>Book a washing machine</h2>
-							<p>*Reminder that laundrette is open from 06.00 to 18.00</p>
+							<p>*Reminder that laundrette is open from 06.00 to 18.00 everyday</p>
 						</header>
 						<form method="post" action="#">
 							<div class="row gtr-uniform">
@@ -130,34 +130,33 @@
 								<div class="col-6 col-12-xsmall">
 									<input type="email" name="demo-email" id="demo-email" value="" placeholder="Email" />
 								</div>
-								<div class="col-12-xsmall">
-									<input type="date" name="demo-email" id="demo-email" value="" placeholder="Date" style="color : black" />
+								<div class="col-12-small">
+									<input type="date" name="demo-date" id="demo-email" value="" placeholder="Date" style="color : black" />
+								</div>
+								<div class="col-12-small">
+									<input type="time" name="demo-time" id="demo-email" value="" placeholder="Time" style="color : black" />
 								</div>
 								<div class="col-12-xsmall">
-									<input type="time" name="demo-email" id="demo-email" value="" placeholder="Time" style="color : black" />
-								</div>
-								<!--<div class="col-12">
-									<select name="demo-category" id="demo-category" class="dropdown-scrollbar">
-										<option value="">- Time (ETA 1 hour) -</option>
-										<option value="1">06.00</option>
-										<option value="1">07.00</option>
-										<option value="1">08.00</option>
-										<option value="1">09.00</option>
-										<option value="1">10.00</option>
-										<option value="1">11.00</option>
-										<option value="1">12.00</option>
-										<option value="1">13.00</option>
-										<option value="1">14.00</option>
-										<option value="1">15.00</option>
-										<option value="1">16.00</option>
-										<option value="1">17.00</option>
+									<select name="demo-category" id="demo-category">
+										<option value="">- Detergent Options -</option>
+										<option value="1">Ultra Clean (£5.50)</option>
+										<option value="1">Golden Shower (£4.20)</option>
+										<option value="1">Supreme Silver (£3.00)</option>
+										<option value="1">Basic Bronze (£1.80)</option>
 									</select>
-								</div>-->
+								</div>
 								<div class="col-12-xsmall">
+									<select name="demo-category" id="demo-category">
+										<option value="">- Drying Options -</option>
+										<option value="1">Ironed and Folded (£7.00)</option>
+										<option value="1">Ironed (£5.50)</option>
+										<option value="1">DIY Dryer (£4.00)</option>
+									</select>
+								</div>
+								<div class="col-12">
 									<input type="checkbox" id="demo-copy" name="demo-copy">
 									<label for="demo-copy">Email me receipt</label>
 								</div>
-								
 								<div class="col-12">
 									<a href="#" class="button primary fit">Complete Booking</a>
 								</div>
@@ -186,6 +185,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
+						<div class="copyright">Find us on</div><br>
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
